<resources>
    <string name="app_name">SmartCalculator</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="_3">3</string>
    <string name="equal">=</string>
    <string name="c">교체</string>
    <string name="m">.</string>
    <string name="num">12313</string>
    <string name="Times">×</string>
    <string name="Obelus">÷</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="pm"><![CDATA[평->㎡]]></string>
    <string name="sh"><![CDATA[섭씨->화씨]]></string>
    <string name="ic"><![CDATA[인치->cm]]></string>
</resources>