<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="230sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="190sp"
            android:layout_margin="30sp"
            android:background="@color/white"
            android:gravity="bottom|right"
            android:text="@string/num"
            android:textSize="50sp"
            tools:ignore="RtlHardcoded" />

        <LinearLayout
            android:layout_marginLeft="15sp"
            android:layout_marginRight="15sp"
            android:background="@color/gray"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>

    </LinearLayout>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAcreage"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/acreage"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnFahrenheit"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/fahrenheit"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnInch"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/inch"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

<!--       출처표시 <a href="https://www.flaticon.com/kr/free-icons/-" title="사용자 인터페이스 아이콘">사용자 인터페이스 아이콘  제작자: Rizki Ahmad Fauzi - Flaticon</a>-->

            <ImageView
                android:id="@+id/btnX"
                android:src="@drawable/x"
                android:layout_width="0dp"
                android:layout_height="90sp"
                android:layout_margin="8dp"
                android:layout_weight="1"/>


    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_7"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_8"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_9"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnObelus"
            android:text="@string/Obelus"
            android:textSize="25sp"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_4"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_5"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_6"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnTimes"
            android:text="@string/Times"
            android:textSize="25sp"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />


    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_1"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_2"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_3"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinus"
            android:textSize="30sp"
            android:text="@string/minus"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />




    </LinearLayout>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnChange"
            android:textSize="25sp"
            android:text="@string/c"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights,UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            android:textSize="30sp"
            android:background="@drawable/radius"
            android:text="@string/_0"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnM"
            android:textSize="30sp"
            android:text="@string/m"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlus"
            android:textSize="30sp"
            android:text="@string/plus"
            android:background="@drawable/radius"
            android:layout_width="0dp"
            android:layout_height="90sp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>


</LinearLayout>






</LinearLayout>